# protoerror

./: .baw  .dockerignore  CHANGELOG  CHANGELOG.md  Jenkinsfile  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg  project.config
.github/workflows/: release.yml
docs/: index.rst  todo.rst
docs/releases/: 0.11.0.rst  0.6.0.rst  0.7.0.rst  1.0.0.rst  1.1.0.rst  backlog.rst  releases.rst
protocol/: __init__.py  __patch__.py  checker.py  cli.py  config.py  control.py  finding.py  group.py  linter.py  merger.py  messages.py  paged.py  question.py  report.py  report_parser.py  simple.py  solution.py  utils.py
protoerror/: __init__.py  cli.py  config.py  control.py  finding.py  group.py  linter.py  merger.py  messages.py  paged.py  question.py  report.py  simple.py  solution.py  utils.py
tests/: __init__.py  conftest.py  fixtures.py  test_checker.py  test_cli.py  test_config.py  test_control.py  test_core.py  test_finding.py  test_finding_location.py  test_group.py  test_linter.py  test_messages.py  test_paged.py  test_question.py  test_report.py  test_report_parser.py  test_solution.py  test_template_replacement.py
tests/example/: solver.py  solver_nostatus.py  solver_question.py  solver_section_skip.py  solver_smart.py  solver_with_decorator.py  solver_with_error.py
tests/report/: double.py  single.py
