[project]
name = "protoerror"
version = "3.20.2"
description = ""
readme = {file = "README", content-type = "text/markdown"}
requires-python = ">=3.12"
authors = [
  {name = "Helmut Konrad Schewe", email = "helmutus@outlook.com"}
]

dependencies = [
    # internal requirements
    "utilo>=2.107.4,<3.0.0",
    "iamraw>=4.91.4,<5.0.0",
    "configos>=1.0.4,<2.0.0",
    # external requirements
    # template engine
    "Jinja2>=3.1.6,<4.0.0",
]

# Optional but recommended metadata
keywords = []
classifiers = [
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "utilotest>=1.0.2,<2.0.0",
    "utilosafe>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/anaticulae/protoerro"
Repository = "https://github.com/anaticulae/protoerro"

[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0"
]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"
[tool.semantic_release.changelog]
mode = "init"
output_format = "md"
[tool.semantic_release.commit_parser_options]
# allways generate a new version
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "deps"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "protoerror",
]
exclude = [
    "tests*",
]
